# mawhrin

./: .gitignore  changes.md  go.mod  license.md  pyproject.toml  readme.md  requirements
mawhrin/: __init__.py  __main__.py
mawhrin/comms/: __init__.py  base.py  find.py  list.py  make.py  open.py  repl.py  show.py
mawhrin/items/: __init__.py  book.py  note.py
mawhrin/items/book/: book.go  book_test.go
mawhrin/items/note/: note.go  note_test.go
mawhrin/tasks/: __init__.py  list.go  list_test.go  tasks.go  tasks_test.go
mawhrin/tools/: __init__.py  data.py  file.py  path.py
mawhrin/tools/clui/: clui.go  clui_test.go
mawhrin/tools/file/: file.go  file_test.go
mawhrin/tools/neat/: neat.go  neat_test.go
mawhrin/tools/path/: path.go  path_test.go
mawhrin/tools/test/: test.go  test_test.go
tests/: __init__.py  conftest.py
tests/test_comms/: __init__.py  test_base.py  test_find.py  test_list.py  test_make.py  test_open.py  test_repl.py  test_show.py
tests/test_items/: __init__.py  test_book.py  test_note.py
tests/test_tasks/: __init__.py
tests/test_tools/: __init__.py  test_data.py  test_file.py  test_path.py
